[gd_scene load_steps=3 format=3 uid="uid://csy2k32qiquny"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_csmal"]
[ext_resource type="Texture2D" uid="uid://cl5cgpr2fsd1k" path="res://sprites/name_back.png" id="2_airte"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_csmal")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="host_button" type="Button" parent="Panel"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 710.0
offset_top = 150.0
offset_right = -710.0
offset_bottom = -780.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 65
text = "Host"

[node name="join_button" type="Button" parent="Panel"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 710.0
offset_top = 360.0
offset_right = -710.0
offset_bottom = -570.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 65
text = "Join"

[node name="settings_button" type="Button" parent="Panel"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 710.0
offset_top = 570.0
offset_right = -710.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 65
text = "Settings"

[node name="exit_button" type="Button" parent="Panel"]
custom_minimum_size = Vector2(500, 150)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 710.0
offset_top = 780.0
offset_right = -710.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 65
text = "Exit"

[node name="name_background" type="Sprite2D" parent="."]
visible = false
position = Vector2(360, 240)
texture = ExtResource("2_airte")
centered = false

[node name="Label" type="Label" parent="name_background"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -262.5
offset_top = 25.0
offset_right = 262.5
offset_bottom = 115.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 65
text = "Enter your name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="username" type="LineEdit" parent="name_background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = 200.0
offset_right = -200.0
offset_bottom = -250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 65
max_length = 15

[node name="ok_button" type="Button" parent="name_background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 475.0
offset_top = 425.0
offset_right = -475.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 65
text = "Ok"

[node name="close_button" type="Button" parent="name_background"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -115.0
offset_top = 25.0
offset_right = -25.0
offset_bottom = 123.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 65
text = "X"

[connection signal="pressed" from="Panel/host_button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="Panel/join_button" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="Panel/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Panel/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="name_background/ok_button" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="name_background/close_button" to="." method="_on_close_button_pressed"]
